--- a/register.html
+++ b/register.html
@@ -130,9 +130,9 @@
   <div class="form-group mb-3">
     <input type="password" id="password" class="form-control" name="password" placeholder="Password" required>
   </div>
-  <button type="submit" class="btn btn-success w-100" onclick="register()">Register</button>
-  <button type="submit" class="btn btn-success w-100" onclick="login()">Login</button>
+<button type="submit" class="btn btn-success w-100" onclick="register()">Register</button>
 
+<button type="submit" class="btn btn-success w-100 mt-4" onclick="login()">Login</button>
 
 
                 <div class="text-center mt-3">
